; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_group_lossy_packet_registerhandler.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_group_lossy_packet_registerhandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 (i8*, i32, i32, i8*, i64*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @group_lossy_packet_registerhandler(%struct.TYPE_5__* %0, i64 %1, i32 (i8*, i32, i32, i8*, i64*, i32)* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32 (i8*, i32, i32, i8*, i64*, i32)*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 (i8*, i32, i32, i8*, i64*, i32)* %2, i32 (i8*, i32, i32, i8*, i64*, i32)** %6, align 8
  %7 = load i32 (i8*, i32, i32, i8*, i64*, i32)*, i32 (i8*, i32, i32, i8*, i64*, i32)** %6, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = load i64, i64* %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i32 (i8*, i32, i32, i8*, i64*, i32)* %7, i32 (i8*, i32, i32, i8*, i64*, i32)** %13, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
